--- a/src/assets/layout/_header.scss
+++ b/src/assets/layout/_header.scss
@@ -1,37 +1,28 @@
 @import "../helpers/variableMy";
 
-.header {
+header {
     height:100%;
     box-shadow: 2px 2px 10px grey;
     background-color: $color-primary;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 
     .logo {
         margin: 10px;
         color: #fff;
         font-weight: 700;
         font-style: oblique;
+        text-decoration: none;
+        &:hover{
+            color:#fff;
+        }
+    }
+    .nav-link{
+        color: #fff;
+        &:hover{
+            color:$color-primary-light;
+            text-decoration: underline;
+            transform: scale(1.1);
+        }
     }
     
-    .menu {
-        display: flex;
-        color: #fff;
-
-        a {
-            padding: 20px;
-            text-decoration: none;
-            margin-right: 20px;
-            font-weight: 700;
-            color: #fff;
-            font-size: 24px;
-            &:hover {
-                background-color: $color-primary;
-                color: $color-primary-light;
-            }
-        }
-        
-    }
 }
 
